--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,10 +8,15 @@ License: MIT + file LICENSE
 Imports: 
     config,
     golem,
+    minifyr,
+    shinipsum,
     shiny
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
