added R6 and transformed server

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Imports: 
     config,
+    gargoyle,
     golem,
     magrittr,
     minifyr,
